Add delete user mechanism

--- a/app/users.component.html
+++ b/app/users.component.html
@@ -15,8 +15,14 @@
     <tr *ngFor="#user of users">
         <td>{{user.name}}</td>
         <td>{{user.email}}</td>
-        <td><i class="glyphicon glyphicon-edit"></i></td>
-        <td><i class="glyphicon glyphicon-remove"></i></td>
+        <td>
+            <a [routerLink]="['EditUser',{id:user.id}]">
+                <i class="glyphicon glyphicon-edit"></i>
+            </a>
+        </td>
+        <td>
+            <i class="glyphicon glyphicon-remove clickable" (click)="deleteUser(user)"></i>
+        </td>
     </tr>
     </tbody>
 </table>
