--- a/app/user-form.component.html
+++ b/app/user-form.component.html
@@ -1,17 +1,17 @@
-<h1>Add User</h1>
+<h1>{{title}}</h1>
 <div class="row">
     <div class="col-md-6 well">
-        <form [ngFormModel]="form">
+        <form [ngFormModel]="form" (ngSubmit)="saveUser()">
             <fieldset>
                 <legend>User</legend>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input ngControl="name" #name="ngForm" id="name" class="form-control">
+                    <input [(ngModel)]="user.name" ngControl="name" #name="ngForm" id="name" class="form-control">
                     <div *ngIf="name.touched && !name.valid" class="alert alert-danger">Name is required</div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input ngControl="email" #email="ngForm" id="email" class="form-control">
+                    <input [(ngModel)]="user.email" ngControl="email" #email="ngForm" id="email" class="form-control">
                     <div *ngIf="email.touched && email.errors">
                         <div *ngIf="email.errors.required" class="alert alert-danger">Email is required</div>
                         <div *ngIf="!email.errors.required && email.errors.email" class="alert alert-danger">Please type
@@ -21,26 +21,26 @@
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input ngControl="phone" id="phone" class="form-control">
+                    <input [(ngModel)]="user.phone" ngControl="phone" id="phone" class="form-control">
                 </div>
             </fieldset>
             <fieldset ngControlGroup="address">
                 <legend>Address</legend>
                 <div class="form-group">
                     <label for="street">Street</label>
-                    <input ngControl="street" id="street" class="form-control">
+                    <input [(ngModel)]="user.address.street" ngControl="street" id="street" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="suite">Suite</label>
-                    <input ngControl="suite" id="suite" class="form-control">
+                    <input [(ngModel)]="user.address.suite" ngControl="suite" id="suite" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="city">City</label>
-                    <input ngControl="city" id="city" class="form-control">
+                    <input [(ngModel)]="user.address.city" ngControl="city" id="city" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="zipcode">Zipcode</label>
-                    <input ngControl="zipcode" id="zipcode" class="form-control">
+                    <input [(ngModel)]="user.address.zipcode" ngControl="zipcode" id="zipcode" class="form-control">
                 </div>
             </fieldset>
             <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Save</button>
