Add spinner to users component

--- a/app/users.component.html
+++ b/app/users.component.html
@@ -2,6 +2,7 @@
 <p>
     <a class="btn btn-primary" [routerLink]="['NewUser']">Add User</a>
 </p>
+<spinner [visible]="isLoading"></spinner>
 <table class="table table-bordered">
     <thead>
     <tr>
