--- a/app/posts.component.html
+++ b/app/posts.component.html
@@ -5,8 +5,11 @@
         <option *ngFor="#user of users" value="{{user.id}}">{{user.name}}</option>
     </select>
     <spinner [visible]="isLoading && !currentPost"></spinner>
+    <pagination [items]="posts"
+                [page-size]="pageSize"
+                (page-changed)="onPageChanged($event)"></pagination>
     <ul class="list-group posts">
-        <li *ngFor="#post of posts"
+        <li *ngFor="#post of pagedPosts"
             class="list-group-item"
             [class.active]="currentPost==post"
             (click)="select(post)">
