--- a/app/pagination.component.html
+++ b/app/pagination.component.html
@@ -1,5 +1,5 @@
 <nav *ngIf="pageSize<items.length" aria-label="Page navigation">
-    <ul class="pagination">
+    <ul class="pagination clickable">
         <li [class.disabled]="currentPage==1">
             <a (click)="previous()" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
