--- a/app/shared/navbar.component.html
+++ b/app/shared/navbar.component.html
@@ -9,14 +9,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a [routerLink]="['Home']" class="navbar-brand">ngProject</a>
+            <a routerLink="" class="navbar-brand">ngProject</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li [class.active]="isCurrentRoute(['Users'])"><a [routerLink]="['Users']">Users</a></li>
-                <li [class.active]="isCurrentRoute(['Posts'])"><a [routerLink]="['Posts']">Posts</a></li>
+                <li routerLinkActive="active"><a routerLink="users">Users</a></li>
+                <li routerLinkActive="active"><a routerLink="posts">Posts</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
